--- a/IM24_Crawler.ipynb
+++ b/IM24_Crawler.ipynb
@@ -283,77 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[810.0,\n",
-       " 849.0,\n",
-       " 799.0,\n",
-       " 869.0,\n",
-       " 746.0,\n",
-       " 639.0,\n",
-       " 834.0,\n",
-       " 675.33,\n",
-       " 581.0,\n",
-       " 789.0,\n",
-       " 781.0,\n",
-       " 610.0,\n",
-       " 699.0,\n",
-       " 613.31,\n",
-       " 882.01,\n",
-       " 598.62,\n",
-       " 699.98,\n",
-       " 770.0,\n",
-       " 739.0,\n",
-       " 844.63,\n",
-       " 604.55,\n",
-       " 430.0,\n",
-       " 795.0,\n",
-       " 650.0,\n",
-       " 703.41,\n",
-       " 827.0,\n",
-       " 670.29,\n",
-       " 871.08,\n",
-       " 825.0,\n",
-       " 849.0,\n",
-       " 595.0,\n",
-       " 644.0,\n",
-       " 840.0,\n",
-       " 840.0,\n",
-       " 660.0,\n",
-       " 602.03,\n",
-       " 520.13,\n",
-       " 524.95,\n",
-       " 835.0,\n",
-       " 713.38,\n",
-       " 580.0,\n",
-       " 643.0,\n",
-       " 711.0,\n",
-       " 724.85,\n",
-       " 695.15,\n",
-       " 693.51,\n",
-       " 770.0,\n",
-       " 600.0,\n",
-       " 614.93,\n",
-       " 509.0,\n",
-       " 610.0,\n",
-       " 700.0,\n",
-       " 646.07,\n",
-       " 780.0,\n",
-       " 699.0,\n",
-       " 730.0,\n",
-       " 779.54,\n",
-       " 573.0,\n",
-       " 565.68,\n",
-       " 615.0,\n",
-       " 625.0,\n",
-       " 655.0]"
-      ]
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>address</th>\n      <th>area</th>\n      <th>balcony</th>\n      <th>cellar</th>\n      <th>contact_name</th>\n      <th>district</th>\n      <th>elevator</th>\n      <th>extra_costs</th>\n      <th>kitchen</th>\n      <th>rent</th>\n      <th>rooms</th>\n      <th>sqm</th>\n      <th>wg</th>\n      <th>score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>Afrikanische Str. 4</td>\n      <td>NaN</td>\n      <td>True</td>\n      <td>NaN</td>\n      <td>Jens Kelpin</td>\n      <td>Wedding (Wedding)</td>\n      <td>True</td>\n      <td>190.00</td>\n      <td>False</td>\n      <td>620.00</td>\n      <td>2.0</td>\n      <td>63.05</td>\n      <td>True</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>Schloßstraße 34</td>\n      <td>NaN</td>\n      <td>True</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Charlottenburg (Charlottenburg)</td>\n      <td>False</td>\n      <td>150.00</td>\n      <td>False</td>\n      <td>699.00</td>\n      <td>1.0</td>\n      <td>53.00</td>\n      <td>False</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>Finowstraße 15</td>\n      <td>NaN</td>\n      <td>True</td>\n      <td>NaN</td>\n      <td>Vermietungsteam Stadthaus Verwaltungsgesellschaft</td>\n      <td>Neukölln (Neukölln)</td>\n      <td>False</td>\n      <td>160.00</td>\n      <td>False</td>\n      <td>639.00</td>\n      <td>2.5</td>\n      <td>67.60</td>\n      <td>True</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>Zillestrasse 19</td>\n      <td>NaN</td>\n      <td>True</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Charlottenburg (Charlottenburg)</td>\n      <td>True</td>\n      <td>180.00</td>\n      <td>False</td>\n      <td>689.00</td>\n      <td>2.0</td>\n      <td>53.00</td>\n      <td>False</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>Finowstraße 23</td>\n      <td>NaN</td>\n      <td>True</td>\n      <td>NaN</td>\n      <td>Vermietungsteam Stadthaus Verwaltungsgesellschaft</td>\n      <td>Neukölln (Neukölln)</td>\n      <td>False</td>\n      <td>116.00</td>\n      <td>False</td>\n      <td>630.00</td>\n      <td>2.0</td>\n      <td>55.93</td>\n      <td>True</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>57</td>\n      <td>Conrad-Blenkle-Straße 65</td>\n      <td>NaN</td>\n      <td>False</td>\n      <td>True</td>\n      <td>Martin Meyer</td>\n      <td>Prenzlauer Berg (Prenzlauer Berg)</td>\n      <td>False</td>\n      <td>63.00</td>\n      <td>False</td>\n      <td>510.00</td>\n      <td>1.0</td>\n      <td>48.13</td>\n      <td>False</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>58</td>\n      <td>Eichbuschallee 20-30</td>\n      <td>NaN</td>\n      <td>True</td>\n      <td>True</td>\n      <td>A Oelmann</td>\n      <td>Plänterwald (Treptow)</td>\n      <td>False</td>\n      <td>117.85</td>\n      <td>False</td>\n      <td>447.83</td>\n      <td>2.0</td>\n      <td>47.14</td>\n      <td>False</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>59</td>\n      <td>Bandelstr. 32</td>\n      <td>NaN</td>\n      <td>True</td>\n      <td>NaN</td>\n      <td>Stephan Papke</td>\n      <td>Tiergarten (Tiergarten)</td>\n      <td>False</td>\n      <td>150.00</td>\n      <td>False</td>\n      <td>465.00</td>\n      <td>2.0</td>\n      <td>50.84</td>\n      <td>False</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>60</td>\n      <td>Mommsenstraße 21</td>\n      <td>NaN</td>\n      <td>False</td>\n      <td>True</td>\n      <td>G. Mielke</td>\n      <td>Charlottenburg (Charlottenburg)</td>\n      <td>False</td>\n      <td>115.00</td>\n      <td>True</td>\n      <td>510.00</td>\n      <td>1.5</td>\n      <td>41.00</td>\n      <td>False</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>61</td>\n      <td>Ringbahnstraße 5-7</td>\n      <td>NaN</td>\n      <td>False</td>\n      <td>True</td>\n      <td>Belinda Heinike</td>\n      <td>Tempelhof (Tempelhof)</td>\n      <td>True</td>\n      <td>165.00</td>\n      <td>False</td>\n      <td>490.00</td>\n      <td>2.0</td>\n      <td>49.00</td>\n      <td>False</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>62 rows × 14 columns</p>\n</div>",
+      "text/plain": "                     address  area  balcony cellar  \\\n0        Afrikanische Str. 4   NaN     True    NaN   \n1            Schloßstraße 34   NaN     True    NaN   \n2             Finowstraße 15   NaN     True    NaN   \n3            Zillestrasse 19   NaN     True    NaN   \n4             Finowstraße 23   NaN     True    NaN   \n..                       ...   ...      ...    ...   \n57  Conrad-Blenkle-Straße 65   NaN    False   True   \n58      Eichbuschallee 20-30   NaN     True   True   \n59             Bandelstr. 32   NaN     True    NaN   \n60          Mommsenstraße 21   NaN    False   True   \n61        Ringbahnstraße 5-7   NaN    False   True   \n\n                                         contact_name  \\\n0                                         Jens Kelpin   \n1                                                 NaN   \n2   Vermietungsteam Stadthaus Verwaltungsgesellschaft   \n3                                                 NaN   \n4   Vermietungsteam Stadthaus Verwaltungsgesellschaft   \n..                                                ...   \n57                                       Martin Meyer   \n58                                          A Oelmann   \n59                                      Stephan Papke   \n60                                          G. Mielke   \n61                                    Belinda Heinike   \n\n                             district  elevator  extra_costs  kitchen    rent  \\\n0                   Wedding (Wedding)      True       190.00    False  620.00   \n1     Charlottenburg (Charlottenburg)     False       150.00    False  699.00   \n2                 Neukölln (Neukölln)     False       160.00    False  639.00   \n3     Charlottenburg (Charlottenburg)      True       180.00    False  689.00   \n4                 Neukölln (Neukölln)     False       116.00    False  630.00   \n..                                ...       ...          ...      ...     ...   \n57  Prenzlauer Berg (Prenzlauer Berg)     False        63.00    False  510.00   \n58              Plänterwald (Treptow)     False       117.85    False  447.83   \n59            Tiergarten (Tiergarten)     False       150.00    False  465.00   \n60    Charlottenburg (Charlottenburg)     False       115.00     True  510.00   \n61              Tempelhof (Tempelhof)      True       165.00    False  490.00   \n\n    rooms    sqm     wg  score  \n0     2.0  63.05   True    NaN  \n1     1.0  53.00  False    NaN  \n2     2.5  67.60   True    NaN  \n3     2.0  53.00  False    NaN  \n4     2.0  55.93   True    NaN  \n..    ...    ...    ...    ...  \n57    1.0  48.13  False    NaN  \n58    2.0  47.14  False    NaN  \n59    2.0  50.84  False    NaN  \n60    1.5  41.00  False    NaN  \n61    2.0  49.00  False    NaN  \n\n[62 rows x 14 columns]"
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +302,7 @@
     "\n",
     "fname = 'apartments.csv' #'/home/aqeel/Dev/ImmoSpider/apartments.csv'\n",
     "df = pd.read_csv(fname)\n",
-    "\n",
+    "# df\n",
     "# link = 'https://www.immobilienscout24.de/expose/114467257' #df.url[5]\n",
     "\n",
     "rand = np.random.choice(df.url, 10)\n",
@@ -374,7 +312,16 @@
     "\n",
     "df = df.reindex(columns = np.concatenate([cols, newcols]))\n",
     "\n",
-    "list(df.rent + df.extra_costs)"
+    "list(df.rent + df.extra_costs)\n",
+    "df.columns\n",
+    "\n",
+    "\n",
+    "dcols = ['address', 'area', 'balcony', 'cellar', 'contact_name',\n",
+    "       'district', 'elevator', 'extra_costs',\n",
+    "       'kitchen', 'rent',\n",
+    "       'rooms', 'sqm', 'wg', 'score']\n",
+    "\n",
+    "df[dcols]"
    ]
   },
   {
@@ -665,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
